# drift_assignment

./: .gitignore  README.md
driftbot_ws/src/driftbot_description/: CMakeLists.txt  package.xml
driftbot_ws/src/driftbot_description/config/: stage2.rviz
driftbot_ws/src/driftbot_description/launch/: view_robot.launch.py
driftbot_ws/src/driftbot_description/meshes/: top_shell_link.stl  wheel_back_left_link.stl  wheel_back_right_link.stl  wheel_front_left_link.stl  wheel_front_right_link.stl
driftbot_ws/src/driftbot_description/rviz/: view_robot.rviz
driftbot_ws/src/driftbot_description/urdf/: arm_active.xacro  arm_cosmetic.xacro  base.xacro  inertia_macros.xacro  materials.xacro  robot.urdf.xacro  ros2_control.xacro  sensors.xacro  torso.xacro
driftbot_ws/src/driftbot_gazebo/: CMakeLists.txt  package.xml
driftbot_ws/src/driftbot_gazebo/launch/: home.launch.py
driftbot_ws/src/driftbot_gazebo/models/Fridge_Cabinet_33x15/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/bookshelf_large/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/chair_1/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/coffee_table_1/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/dropoff_box/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/file_cabinet_large/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/side_table_1/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/sofa_set_1/: model.sdf
driftbot_ws/src/driftbot_gazebo/models/table_dining/: model.sdf
driftbot_ws/src/driftbot_gazebo/rviz/: home_sim.rviz
driftbot_ws/src/driftbot_gazebo/worlds/: home.sdf
driftbot_ws/src/driftbot_task/: package.xml  setup.cfg  setup.py
driftbot_ws/src/driftbot_task/config/: gz_bridge.yaml  mission.yaml  tidying.yaml  tidying_bridge.yaml
driftbot_ws/src/driftbot_task/driftbot_task/: gz_bridge_support.py  gz_support.py  joint_states_snapshot.py  scan_pipeline.py  sim_tf_relay.py  task_node.py
driftbot_ws/src/driftbot_task/driftbot_task/missions/: __init__.py  mission_01.py  mission_02.py
driftbot_ws/src/driftbot_task/launch/: mission.launch.py  tidying.launch.py
driftbot_ws/src/driftbot_task/rviz/: mission.rviz  tidying.rviz
